# StrategAI

./: .env.example  .env.testing  .gitignore  .impeccable.md  AGENTS.md  DEPLOYMENT.md  DEVELOPMENT.md  GAMEPLAY.md  PUBLISHING.md  README.md  README_dataset_pipeline.md  README_hf_dataset_tools.md  SECURITY.md  STRUCTURE_WORKFLOWS.md  config.yaml  environment.yml  planning.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  source-data-old.py  training-guide.md
assetserver/: .env.testing  AGENTS.md  DEPLOYMENT.md  README.md  SECURITY.md  config.yaml  pyproject.toml  pytest.ini
backend/: .env.example  AGENTS.md  README.md  pyproject.toml
backend/.github/agents/: game-engine.agent.md  llm-integration.agent.md  orchestrator.agent.md
backend/app/: main.py
backend/app/api/: actions.py  game_factory.py  schemas.py  store.py
backend/app/api/routers/: actions.py  audio.py  games.py  turns.py
backend/app/engine/: borders.py  buildings.py  city_founding.py  city_names.py  combat.py  diplomacy.py  directives.py  economy.py  executor.py  fog_of_war.py  hex.py  human_source.py  improvements.py  intents.py  map_generator.py  models.py  movement.py  openai_goals.py  operations.py  playthrough.py  production.py  research.py  serialize.py  starting_positions.py  terrain.py  turn_resolver.py  victory.py
backend/docs/: API_REFERENCE.md  BACKEND_CONFIG.md
backend/scripts/: run_playthrough.py
backend/tests/: test_action_validator.py  test_api.py  test_api_schemas.py  test_borders.py  test_city_capture.py  test_city_founding.py  test_combat.py  test_diplomacy.py  test_directives.py  test_economy.py  test_executor.py  test_fog_of_war.py  test_gamestate_extended.py  test_healing_and_terrain_defense.py  test_hex.py  test_human_source.py  test_improvements.py  test_map_generator.py  test_map_generator_v2.py  test_models.py  test_movement.py  test_openai_goals.py  test_operations.py  test_playthrough.py  test_production.py  test_relationships_and_truces.py  test_research.py  test_serialize.py  test_starting_positions.py  test_tech_gated_units.py  test_terrain_extended.py  test_turn_resolver.py  test_victory.py
config/: background_tile_workflow.json  data.yaml  lora_4b.yaml  lora_4b_detailed_high.yaml  lora_4b_detailed_low.yaml  lora_4b_minimal_high.yaml  lora_4b_minimal_low.yaml  lora_4b_ultra_high.yaml  lora_4b_ultra_low.yaml  lora_9b.yaml  model_flux2_klein_4b.yaml  model_flux2_klein_9b.yaml  prompt_templates.json  run_lora.yaml  structure_workflow.json  structure_workflow_transparentbg.json
configs/: data.yaml  model_flux2_klein_4b.yaml  model_flux2_klein_9b.yaml  run_lora.yaml
convertive/: background_metadata_example.json  structure_metadata_example.json  templates.txt
dataset/: README.md
dataset-gen-train/: .gitignore  AGENTS.md  README.md  pyproject.toml
dataset-gen-train/.github/agents/: code-quality.agent.md  dataset.agent.md  orchestrator.agent.md  publishing.agent.md  training.agent.md
dataset-gen-train/config/: prompt_templates.json
dataset-gen-train/config/training/: lora_4b_detailed_high.yaml  lora_4b_detailed_low.yaml  lora_4b_minimal_high.yaml  lora_4b_ultra_high.yaml
dataset-gen-train/docs/:  DATASET_CARD.md  MODEL_CARD.md  comfyui-workflows.md  experiment-design.md
dataset-gen-train/scripts/: generate_comparison_grid.py  sample_checkpoints.py  sample_prompts.json
dataset-gen-train/src/generation/: __init__.py
dataset-gen-train/src/training/: __init__.py  derive_captions.py  sync_validation_prompts.py
dataset-gen-train/tests/generation/: test_image_metadata.py
dataset-gen-train/tests/training/: test_extract_training_set.py
docs/: ARCHITECTURE.md  ASSET_INTEGRATION.md  BACKEND_CONFIG.md  DEPLOYMENT.md  DEVELOPMENT.md  FIGURE_DESCRIPTIONS.md  FRONTEND_ARCHITECTURE.md  GAMEPLAY.md  IEEE_REPORT.md  IEEE_REPORT.tex  IEEE_REPORT_COMPLETE.tex  PRESENTATION_OUTLINE.md  PROJECT_COMPLETION_GUIDE.md  REPORT_ENHANCEMENTS.md  REPORT_HANDOFF.md  SEPARATION_OF_CONCERNS.md  UI_GUIDE.md  api-examples.md  architecture.md  client-api-leader-guide.md  client-api-tile-guide.md  client-api-unit-guide.md  comfyui-setup-guide.md  experiment-design.md  (+17 more)
(+333 files in other folders)
