[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topdown-medieval-pixelart"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings[yaml]>=2.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.24.0",
    "websockets>=12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]